--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="hero-container" data-aos="fade-in">
       <h1>Gokkulnath T S</h1>
       <p>I'm <span class="typed"
-          data-typed-items="Software Developer, Independent Researcher, Deep Learning and Computer Vision Enthusiast"></span>
+          data-typed-items="a Software Developer, an Independent Researcher, a Deep Learning and Computer Vision Enthusiast"></span>
       </p>
     </div>
   </section><!-- End Hero -->
