--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
         <div class="section-title">
           <h2>Resume</h2>
           <p></p>
+          <p data-aos="fade-left">Pdf Version Available @ <a href="">Link</a>. Last Updated on 31-01-2020 </p>
         </div>
 
         <div class="row">
@@ -220,13 +221,6 @@
             </div>
 
             <h3 class="resume-title">Education</h3>
-            <!-- <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui
-                ut dignissimos deleniti nerada porti sand markend</p>
-            </div> -->
             <div class="resume-item">
               <h4>Bachelor of Technology in Electronics and Communication Engineering</h4>
               <h5>2013 - 2017</h5>
@@ -441,6 +435,18 @@
 
       </div>
     </section><!-- End Portfolio Section -->
+
+    <!-- ======= Footer ======= -->
+    <footer id="footer">
+      <div class="container">
+        <div class="copyright">
+          © Copyright <strong><span>Gokkulnath T S</span></strong>
+        </div>
+        <div class="credits">Thoughts, stories and ideas. ~Gokkulnath</div>
+
+      </div>
+    </footer>
+    <!-- End  Footer -->
 
   </main><!-- End #main -->
 
