--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Gokkulnath Portfolio</title>
+  <title>Gokkulnath's Portfolio</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -66,6 +66,7 @@
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
           <li><a href="https://blog.gokkulnath.ml/"><i class="bx bx-server"></i> Blog</a></li>
+          <li><a href="#otheractivities"><i class="bx bx-briefcase"></i> Other Activities</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -207,7 +208,6 @@
         <div class="section-title">
           <h2>Resume</h2>
           <p></p>
-          <p data-aos="fade-left">Pdf Version Available @ <a href="">Link</a>. Last Updated on 31-01-2020 </p>
         </div>
 
         <div class="row">
@@ -245,9 +245,6 @@
                       industry.</em></p>
                 </li>
               </ul>
-
-
-
             </div>
 
             <h3 class="resume-title">Awards & Achievements</h3>
@@ -304,10 +301,23 @@
                 <li>Tools Used: MATLAB, Python, Scikit-learn and LIBSVM.</li>
               </ul>
             </div>
-          </div>
-        </div>
 
-      </div>
+            <h3 class="resume-title">Publications</h3>
+            <div class="resume-item">
+              <h5>Tracking Inbound Enemy Missile for Interception from Target Aircraft Using Extended
+                Kalman Filter</h5>
+              <p><em>Gokkul Nath T.S., Sudheesh P., Jayakumar M</em></p>
+              <p>Mueller P., Thampi S., Alam Bhuiyan M., Ko R., Doss R., Alcaraz Calero J. (eds) Security in Computing
+                and Communications. SSCC 2016. Communications in Computer and Information Science, vol 625. Springer,
+                Singapore. <a href="https://link.springer.com/chapter/10.1007/978-981-10-2738-3_23">Link</a>
+              </p>
+
+
+            </div>
+          </div>
+          <p data-aos="fade-up">Pdf Version Available @ <a href="">Link</a>. Last Updated on 31-01-2020 </p>
+
+        </div>
     </section><!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
@@ -435,6 +445,125 @@
 
       </div>
     </section><!-- End Portfolio Section -->
+
+
+
+
+
+    <!-- ======= Other Activities Section ======= -->
+    <section id="otheractivities" class="resume">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Other Activities</h2>
+          <p></p>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6" data-aos="fade-up">
+            <h3 class="resume-title">Trainings:</h3>
+
+            <div class="resume-item">
+              <h4> Fast.ai International Fellow for Part 1 Version 2 Course </h4>
+              <h5>Oct 2017</h5>
+              <p>Seven week course on Practical Deep Learning taught by Prof. Jeremy Howard professor at The Data
+                Institute at USF. One of the Key outcomes on completion of the course is the ability to build State of
+                the Art models on major Vision based task and understanding the relevant theory.</p>
+            </div>
+
+
+            <div class="resume-item">
+              <h4>Product Development Trainee, Ashwin Electronics</h4>
+              <h5>Jul 2015</h5>
+              <p>Understood the engineering design of auto fare meters from concept to product phase. Further, Assessed
+                if any scope of improvement can be done. The training included discussion of advanced topics on embedded
+                system development and working in teams to test the product developed.</p>
+            </div>
+
+            <div class="resume-item">
+              <h4>Industrial Training, Heavy Alloy Penetrator Project, Ministry Of Defence</h4>
+              <h5>Jun 2015</h5>
+              <p>Exposed to manufacturing process and machining process using powder metallurgy and high precision CNC
+                technology respectively. Further, got acquainted with operations of CNC and G-codes. End to End
+                manufacturing of Armor Piercing Anti Tank Missile was Studied.</p>
+            </div>
+
+            <div class="resume-item">
+              <h4>In-plant Training, Central Electronics Engineering Research Institute (CEERI), India</h4>
+              <h5>Dec 2014</h5>
+              <p>Strengthened technical skills to incorporate and realize industrial etiquette like safety priorities
+                for plant/machine inspection, problem solving, and managerial
+                skill sets. Examined various industrial research methodology and Operations ranging from product
+                Inspection. Exposure to Machine Vision and Computer vision based food inspection, fault detection of
+                metal sheets and screening using automation.</p>
+            </div>
+
+
+
+            <h3 class="resume-title">Postions of Resposibility</h3>
+
+            <div class="resume-item">
+              <ul>
+                <li>
+                  <p><em>Workshop Co-ordinator Sixth Sense Robotics, Anokha 2016.</em></p>
+                </li>
+                <li>
+                  <p><em>Technical Stall Manager, Anokha 2015.</em></p>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+
+            <h3 class="resume-title">Events and Workshops</h3>
+            <div class="resume-item">
+              <ul>
+                <li>
+                  <p><em>National Level Workshop on Biomedical Signal Acquisition & Conditioning- BiSAC 2015 : Got
+                      insight to the various types of Bio Medical signals acquired, the causes for some of the possible
+                      problems and probable solutions.</em></p>
+                </li>
+                <li>
+                  <p><em>National Level Workshop on Network Simulator (NS2):-Hand on Experience in programming and
+                      simulation of wired and wireless sensor network with various design examples.</em></p>
+                </li>
+                <li>
+                  <p><em>IETE Workshop on Soft Computing Techniques: - Introduction to Soft Computing Techniques like
+                      Fuzzy Logic, Genetic Algorithm, Simulated Annealing and Particle Swarm Optimization with Hands on
+                      Programming Experience using Matlab.</em></p>
+                </li>
+                <li>
+                  <p><em>IETE Workshop on Soft Computing Techniques: - Introduction to Soft Computing Techniques like
+                      Fuzzy Logic, Genetic Algorithm, Simulated Annealing and Particle Swarm Optimization with Hands on
+                      Programming Experience using Matlab.</em></p>
+                </li>
+                <li>
+                  <p><em>Green Electronics Symposium (Coimbatore): Organized By IETE Coimbatore held at Amrita Vishwa
+                      Vidhyapeedham to promote Engineers towards Eco Friendly Electronic Manufacturing various other
+                      factors.</em></p>
+                </li>
+                <li>
+                  <p><em>National Workshop On Composite Materials (ICAD&M-2014):- A Pre-conference workshop on
+                      'Composites and their applications in aerospace and automotive Field. Got Acquainted various
+                      Composite materials and their applications.</em></p>
+                </li>
+                <li>
+                  <p><em>Electronics Rocks 2014:- Surveyed regarding the recent trends and advancements in the
+                      electronics industry and got acquainted with field experts from various verticals of the
+                      Electronics industry. Expanded the horizons for scope of Electronic industry.</em></p>
+                </li>
+                <li>
+                  <p><em>DEFCON Bangalore 2013:- Awareness on Cyber Security and various security issues in Embedded
+                      Systems (SCADA) was discussed.</em></p>
+                </li>
+
+              </ul>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Other Activities Section -->
 
     <!-- ======= Footer ======= -->
     <footer id="footer">
