--- a/index.html
+++ b/index.html
@@ -225,9 +225,7 @@
               <h4>Bachelor of Technology in Electronics and Communication Engineering</h4>
               <h5>2013 - 2017</h5>
               <p><em>Amrita School of Engineering, Coimbatore, India</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius
-                unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart
-                dila</p>
+              <p>GPA: 8.67</p>
             </div>
 
             <h3 class="resume-title">Volunteering & Teaching</h3>
@@ -326,16 +324,16 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>TODO</p>
+          <!-- <p>TODO</p> -->
         </div>
 
         <div class="row" data-aos="fade-up">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-app">AML</li>
+              <li data-filter=".filter-card">CV</li>
+              <li data-filter=".filter-web">ML</li>
             </ul>
           </div>
         </div>
@@ -347,13 +345,13 @@
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox"
-                  title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  title="NAG:Network Adversary Generator"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/Gokkulnath/NAG_Pytorch" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -439,7 +437,7 @@
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
