Fix GPA minor Details

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
               <h4>Bachelor of Technology in Electronics and Communication Engineering</h4>
               <h5>2013 - 2017</h5>
               <p><em>Amrita School of Engineering, Coimbatore, India</em></p>
-              <p>GPA: 8.67</p>
+              <p>GPA: 8.67 (8.79*) </p>
             </div>
 
             <h3 class="resume-title">Volunteering & Teaching</h3>
@@ -259,7 +259,7 @@
                 </li>
                 <li>
                   <p><em>One of the 15 Selected Outreach Participant to attend Computational Science Symposium
-                      (CSS-2017)@IISC, Bangalore</em></p>
+                      (CSS-2017)@<em>Indian Institute of Science</em>, Bangalore</em></p>
                 </li>
               </ul>
             </div>
@@ -292,7 +292,7 @@
             <div class="resume-item">
               <h4>Research Intern</h4>
               <h5>May 2017 - July 2017</h5>
-              <p><em>HTIC-IIT M Research Park, Chennai,, India </em></p>
+              <p><em>HTIC-IIT M Research Park, Chennai, India </em></p>
               <ul>
                 <li>Developed Low-Cost Activity recognition models for wearable devices based on Support vector
                   machine, Decision Tree using IMU Sensor data.</li>
@@ -314,6 +314,7 @@
             </div>
           </div>
           <p data-aos="fade-up">Pdf Version Available @ <a href="">Link</a>. Last Updated on 31-01-2020 </p>
+          <p data-aos="fade-up">* Indicates GPA Calculated based only on Core Subjects.</p>
 
         </div>
     </section><!-- End Resume Section -->
