--- a/index.html
+++ b/index.html
@@ -212,13 +212,13 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
+            <!-- <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Gokkulnath T S</h4>
               <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and
                   developing user-centered digital/print marketing material from initial concept to final, polished
                   deliverable.</em></p>
-            </div>
+            </div> -->
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
@@ -259,7 +259,7 @@
                 </li>
                 <li>
                   <p><em>One of the 15 Selected Outreach Participant to attend Computational Science Symposium
-                      (CSS-2017)@<em>Indian Institute of Science</em>, Bangalore</em></p>
+                      (CSS-2017) at <strong>Indian Institute of Science, Bangalore</strong></em></p>
                 </li>
               </ul>
             </div>
@@ -313,8 +313,8 @@
 
             </div>
           </div>
-          <p data-aos="fade-up">Pdf Version Available @ <a href="">Link</a>. Last Updated on 31-01-2020 </p>
-          <p data-aos="fade-up">* Indicates GPA Calculated based only on Core Subjects.</p>
+          <p data-aos="fade-up">* Indicates GPA Calculated based only on Core Subjects. Pdf Version Available @ <a
+              href="">Link</a>. Last Updated on 31-01-2020. </p>
 
         </div>
     </section><!-- End Resume Section -->
