--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@
 
             </div>
           </div>
-          <p data-aos="fade-up">* Indicates GPA Calculated based only on Core Subjects. Pdf Version Available @ <a
-              href="">Link</a>. Last Updated on 31-01-2020. </p>
+          <em data-aos="fade-up">* Indicates GPA Calculated based only on Core Subjects. Pdf Version Available @ <a
+              href="">Link</a>. Last Updated on 31-01-2020. </em>
 
         </div>
     </section><!-- End Resume Section -->
