--- a/index.html
+++ b/index.html
@@ -518,42 +518,52 @@
             <div class="resume-item">
               <ul>
                 <li>
-                  <p><em>National Level Workshop on Biomedical Signal Acquisition & Conditioning- BiSAC 2015 : Got
+                  <p><em> <strong>National Level Workshop on Biomedical Signal Acquisition & Conditioning- BiSAC 2015
+                        :</strong> Got
                       insight to the various types of Bio Medical signals acquired, the causes for some of the possible
                       problems and probable solutions.</em></p>
                 </li>
                 <li>
-                  <p><em>National Level Workshop on Network Simulator (NS2):-Hand on Experience in programming and
+                  <p><em><strong>National Level Workshop on Network Simulator (NS2)::</strong>Hand on Experience in
+                      programming and
                       simulation of wired and wireless sensor network with various design examples.</em></p>
                 </li>
                 <li>
-                  <p><em>IETE Workshop on Soft Computing Techniques: - Introduction to Soft Computing Techniques like
+                  <p><em> <strong>IETE Workshop on Soft Computing Techniques::</strong>Introduction to Soft Computing
+                      Techniques like
                       Fuzzy Logic, Genetic Algorithm, Simulated Annealing and Particle Swarm Optimization with Hands on
                       Programming Experience using Matlab.</em></p>
                 </li>
                 <li>
-                  <p><em>IETE Workshop on Soft Computing Techniques: - Introduction to Soft Computing Techniques like
+                  <p><em> <strong>IETE Workshop on Soft Computing Techniques:</strong> Introduction to Soft Computing
+                      Techniques like
                       Fuzzy Logic, Genetic Algorithm, Simulated Annealing and Particle Swarm Optimization with Hands on
                       Programming Experience using Matlab.</em></p>
                 </li>
                 <li>
-                  <p><em>Green Electronics Symposium (Coimbatore): Organized By IETE Coimbatore held at Amrita Vishwa
+                  <p><em><strong>Green Electronics Symposium (Coimbatore): </strong>Organized By IETE Coimbatore held at
+                      Amrita Vishwa
                       Vidhyapeedham to promote Engineers towards Eco Friendly Electronic Manufacturing various other
                       factors.</em></p>
                 </li>
                 <li>
-                  <p><em>National Workshop On Composite Materials (ICAD&M-2014):- A Pre-conference workshop on
+                  <p><em><strong>National Workshop On Composite Materials (ICAD&M-2014):</strong> A Pre-conference
+                      workshop on
                       'Composites and their applications in aerospace and automotive Field. Got Acquainted various
                       Composite materials and their applications.</em></p>
                 </li>
                 <li>
-                  <p><em>Electronics Rocks 2014:- Surveyed regarding the recent trends and advancements in the
+                  <p><em><strong>Electronics Rocks 2014:</strong> Surveyed regarding the recent trends and advancements
+                      in the
                       electronics industry and got acquainted with field experts from various verticals of the
-                      Electronics industry. Expanded the horizons for scope of Electronic industry.</em></p>
+                      Electronics industry. Expanded the horizons of understanding the scope of Electronic industry and
+                      its products.</em></p>
                 </li>
                 <li>
-                  <p><em>DEFCON Bangalore 2013:- Awareness on Cyber Security and various security issues in Embedded
-                      Systems (SCADA) was discussed.</em></p>
+                  <p><em><strong>DEFCON Bangalore 2013:</strong>First Event attended outside my city. Enhanced my
+                      awareness on Cyber Security and various security issues in Embedded
+                      Systems (SCADA-Stuxnet) and Internet(XSS Vulnerabilities, Mobile WEP Cracking)) was
+                      discussed.</em></p>
                 </li>
 
               </ul>
