--- a/index.html
+++ b/index.html
@@ -524,12 +524,12 @@
                       problems and probable solutions.</em></p>
                 </li>
                 <li>
-                  <p><em><strong>National Level Workshop on Network Simulator (NS2)::</strong>Hand on Experience in
+                  <p><em><strong>National Level Workshop on Network Simulator (NS2)::</strong> Hand on Experience in
                       programming and
                       simulation of wired and wireless sensor network with various design examples.</em></p>
                 </li>
                 <li>
-                  <p><em> <strong>IETE Workshop on Soft Computing Techniques::</strong>Introduction to Soft Computing
+                  <p><em> <strong>IETE Workshop on Soft Computing Techniques::</strong> Introduction to Soft Computing
                       Techniques like
                       Fuzzy Logic, Genetic Algorithm, Simulated Annealing and Particle Swarm Optimization with Hands on
                       Programming Experience using Matlab.</em></p>
@@ -541,7 +541,8 @@
                       Programming Experience using Matlab.</em></p>
                 </li>
                 <li>
-                  <p><em><strong>Green Electronics Symposium (Coimbatore): </strong>Organized By IETE Coimbatore held at
+                  <p><em><strong>Green Electronics Symposium (Coimbatore): </strong> Organized By IETE Coimbatore held
+                      at
                       Amrita Vishwa
                       Vidhyapeedham to promote Engineers towards Eco Friendly Electronic Manufacturing various other
                       factors.</em></p>
@@ -560,9 +561,9 @@
                       its products.</em></p>
                 </li>
                 <li>
-                  <p><em><strong>DEFCON Bangalore 2013:</strong>First Event attended outside my city. Enhanced my
+                  <p><em><strong>DEFCON Bangalore 2013:</strong> First Event attended outside my city. Enhanced my
                       awareness on Cyber Security and various security issues in Embedded
-                      Systems (SCADA-Stuxnet) and Internet(XSS Vulnerabilities, Mobile WEP Cracking)) was
+                      Systems (SCADA-Stuxnet) and Internet (XSS Vulnerabilities, Mobile WEP Cracking) was
                       discussed.</em></p>
                 </li>
 
