--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+  <meta name="google-site-verification" content="gdnG_d1IxyPc9O6u4qLKmzoOPxKBvH_PZwtJKrycWzk" />
   <title>Gokkulnath's Portfolio</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
