--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Software Development Engineer</h4>
-              <h5>Sept 2017 - Present</h5>
+              <h5>Sept 2017 - Dec 2019</h5>
               <p><em>Ericsson, Bangalore, India </em></p>
               <ul>
                 <li>Handled automation and testing tool development activities for SIP protocol based Toll Free and
