--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
+          <h2>Projects</h2>
           <!-- <p>TODO</p> -->
         </div>
 
