--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             </div>
           </div>
           <em data-aos="fade-up">* Indicates GPA Calculated based only on Core Subjects. Pdf Version Available @ <a
-              href="">Link</a>. Last Updated on 31-01-2020. </em>
+              href="https://drive.google.com/file/d/1iV4duI0lgI0tU-12d5JN4OziEPVpdYAf/view?usp=sharing">Link</a>. Last Updated on 12-08-2020. </em>
 
         </div>
     </section><!-- End Resume Section -->
