--- a/index.html
+++ b/index.html
@@ -247,13 +247,8 @@
                       more than 50 Colleagues and enabled them to apply machine learning to Telecom and IT
                       industry.</em></p>
                       <p>
-                        Python Materials Available <a href="">Link</a>
+                        Python Materials available at <a href=https://github.com/Gokkulnath/Presentations"">Link</a>
                       </p>
-
-                      <p>
-                        Machine Learning Materials Available <a href="">Link</a>
-                      </p>
-
                     </li>
               </ul>
             </div>
