--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                       more than 50 Colleagues and enabled them to apply machine learning to Telecom and IT
                       industry.</em></p>
                       <p>
-                        Python Materials available at<a href=https://github.com/Gokkulnath/Presentations"">Link</a>
+                        Python Materials available at <a href=https://github.com/Gokkulnath/Presentations">Link</a>
                       </p>
                     </li>
               </ul>
