--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                   management of VNF workloads.</li>
                 <li>Tools Used: Python, Selenium, Robot framework, Openstack and various ericsson cloud platforms
                   like ECM, EOC etc. Key Responsibilities: API Automation, Web GUI Automation.</li>
-                  <a href="assets/documents/Ericssson_Internship_Report.pdf">Internship Report</a>
+                  <a href="assets/documents/Ericssson_Internship_Report.pdf">Internship Repor Summary</a>
               </ul>
             </div>
 
