--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                   <p><em>1 out 15 Top performers for 2018-2019 in BMAS SA MS IT & ADM Unit - Feb.2019</em></p>
                 </li>
                 <li>
-                  <p><em>2018 Q3: Power Award for Extensive Contribution towards automation initiatives in BMAS SA MS IT & ADM Unit = Sept.2018</em></p>
+                  <p><em>2018 Q3: Power Award for Extensive Contribution towards automation initiatives in BMAS SA MS IT & ADM Unit - Sept.2018</em></p>
                 </li>
 
                 <li>
