Move Publications Separate Section

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 <li>Tools Used: MATLAB, Python, Scikit-learn and LIBSVM.</li>
               </ul>
             </div>
-
+<!-- 
             <h3 class="resume-title">Publications</h3>
             <div class="resume-item">
               <h5>Tracking Inbound Enemy Missile for Interception from Target Aircraft Using Extended
@@ -333,7 +333,7 @@
                 model, which in turn gives the user the ability to implement real time applications on low power computing
                 devices and reduces hardware requirement.<a href="https://doi.org/10.36227/techrxiv.12895025.v1">Pre-Print</a>
               </p>
-            </div>
+            </div> -->
 
 
           </div>
@@ -343,6 +343,51 @@
 
         </div>
     </section><!-- End Resume Section -->
+
+
+<!-- ======= Publications Section ======= -->
+<section id="publication" class="publication">
+  <div class="container">
+    <div class="section-title">
+      <h2>Publications</h2>
+    </div>
+
+    <div class="row">
+  
+      <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-down">
+        <h3>Accepted Publications:</h3>
+
+        <div class="resume-item">
+          <h5>Tracking Inbound Enemy Missile for Interception from Target Aircraft Using Extended
+            Kalman Filter</h5>
+          <p><em>Gokkul Nath T.S., Sudheesh P., Jayakumar M</em></p>
+          <p>Mueller P., Thampi S., Alam Bhuiyan M., Ko R., Doss R., Alcaraz Calero J. (eds) Security in Computing
+            and Communications. SSCC 2016. Communications in Computer and Information Science, vol 625. Springer,
+            Singapore. <a href="https://link.springer.com/chapter/10.1007/978-981-10-2738-3_23">Link</a>
+          </p>
+   
+        </div>
+
+        <br>
+        <h3>Failed Publications:</h3>
+
+        <div class="resume-item">
+          <h5>A Novel Clustered Support Vector Machine with Reduced Support Vectors for Big Data Classification</h5>
+          <p><em>GokkulNath T.S., Ramanathan R</em></p>
+          <p> Reduction in number of Support Vector is essential because it reduces the computation complexity of the
+            model, which in turn gives the user the ability to implement real time applications on low power computing
+            devices and reduces hardware requirement. <a href="https://doi.org/10.36227/techrxiv.12895025.v1">Techrxiv</a>
+          </p>
+        </div>
+      
+      </div>
+    </div>
+
+  </div>
+</section><!-- End Publications Section -->
+
+
+
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
