Add Link to HTIC Report

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
           <li class="active"><a href="https://gokkulnath.ml"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="#publication"><i class="bx bx-file-blank"></i> <span>Publications</span></a></li>
           <li><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
           <li><a href="https://blog.gokkulnath.ml/"><i class="bx bx-server"></i> Blog</a></li>
           <li><a href="#otheractivities"><i class="bx bx-briefcase"></i> Other Activities</a></li>
@@ -231,6 +232,11 @@
               <h5>2013 - 2017</h5>
               <p><em>Amrita School of Engineering, Coimbatore, India</em></p>
               <p>GPA: 8.67 (8.79*) </p>
+            <!-- TODO -->
+              <!-- <p>
+                Major Coursework: 
+              </p> -->
+
             </div>
 
             <h3 class="resume-title">Volunteering & Teaching</h3>
@@ -241,6 +247,7 @@
                       learning and have healthy discussions.</em> <a
                       href="https://drive.google.com/file/d/0B8fFbqHo9tl6ZktpWnBSMlNPdmtUcXFLNzYxNXNxNHdfYlRj/view">Testimonial</a>
                   </p>
+                  <!-- TODO: Add URL to AI Saturdays Notes and Pics?-->
                 </li>
                 <li>
                   <p><em>Ericsson Internal Trainer for Machine Learning and Python Competence development. Trained
@@ -310,6 +317,7 @@
                 <li>Developed Low-Cost Activity recognition models for wearable devices based on Support vector
                   machine, Decision Tree using IMU Sensor data.</li>
                 <li>Tools Used: MATLAB, Python, Scikit-learn and LIBSVM.</li>
+                <a href="https://gokkulnath.github.io/Tennis-Shot-Classification-9DOF/">Project Report</a>
               </ul>
             </div>
 <!-- 
@@ -373,7 +381,7 @@
 
         <div class="resume-item">
           <h5>A Novel Clustered Support Vector Machine with Reduced Support Vectors for Big Data Classification</h5>
-          <p><em>GokkulNath T.S., Ramanathan R</em></p>
+          <p><em>Gokkulnath T.S., Ramanathan R</em></p>
           <p> Reduction in number of Support Vector is essential because it reduces the computation complexity of the
             model, which in turn gives the user the ability to implement real time applications on low power computing
             devices and reduces hardware requirement. <a href="https://doi.org/10.36227/techrxiv.12895025.v1">Techrxiv</a>
@@ -382,6 +390,11 @@
       
       </div>
     </div>
+
+    <br>
+    <em data-aos="fade-down">Up to Date List of Publications can be Found at <strong>Google Scholar</strong>:  <a
+      href="https://scholar.google.com/citations?user=Nr37mWUAAAAJ&hl=en">Link</a>
+    </em>
 
   </div>
 </section><!-- End Publications Section -->
