--- a/index.html
+++ b/index.html
@@ -99,16 +99,6 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am 25 years old. I was born in the city of <a href="https://en.wikipedia.org/wiki/Madurai">Madurai</a> in
-            India. I lived in <a href="https://en.wikipedia.org/wiki/Coimbatore">Coimbatore</a> for four years while I
-            was pursuing my undergraduate education.I have also lived in Trichy, Vellore and Chennai during school days.
-            Currently I stay in <a href="https://en.wikipedia.org/wiki/Bangalore">Bengaluru</a>, Karnataka. I completed
-            my undergraduate education in Electronics and Communication Engineering from the <a
-              href="https://www.amrita.edu/campus/coimbatore">Amrita School of Engineering, Coimbatore</a> on May 2017.
-          </p>
-
-
-
         </div>
 
         <div class="row">
@@ -116,9 +106,9 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Software Development Engineer and Independent Researcher.</h3>
+            <h3>I am a Software Development Engineer and Independent Researcher.</h3>
 
-            <p>I currently work as a Software Development Engineer, Testing Virtual Network Functions(VNF) and solve
+            <p>I Used to work as a Software Development Engineer, Testing Virtual Network Functions(VNF) and solve
               Cloud based challenges related to Telecom Industry at <a href="https://ericsson.com/">Ericsson</a>,
               Bangalore, Karnataka.</p>
             <p>I am interested in Deep Learning and Computer Vision with specific focus on GANs, Adversarial Machine
