ICML Volunteer info add

--- a/index.html
+++ b/index.html
@@ -232,6 +232,13 @@
             <h3 class="resume-title">Volunteering & Teaching</h3>
             <div class="resume-item">
               <ul>
+
+                <li>
+                  <p><em>Volunteer for the thirty-seventh International Conference on Machine Learning, ICML 2020.</em> <a
+                      href="assets/documents/Thirukonda Srinivasan Gokkulnath_ICML_Certificate.pdf">Certificate of Appreciation</a>
+                  </p>
+                </li>
+
                 <li>
                   <p><em>AI Saturdays Ambassador - Cycle 1: Hosted weekly Meetups to help people get started with deep
                       learning and have healthy discussions.</em> <a
