--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
           </div>
           <em data-aos="fade-up">* Indicates GPA Calculated based only on Core Subjects. Pdf Version Available @ <a
-              href="https://drive.google.com/file/d/1iV4duI0lgI0tU-12d5JN4OziEPVpdYAf/view?usp=sharing">Link</a>. Last
+              href="Gokkulnath_TS.pdf">Link</a>. Last
             Updated on 12-08-2020. </em>
 
         </div>
