move pdf into folder

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
           </div>
           <em data-aos="fade-up">* Indicates GPA Calculated based only on Core Subjects. Pdf Version Available @ <a
-              href="Gokkulnath_TS.pdf">Link</a>. Last
+              href="assets/documents/Gokkulnath_TS.pdf">Link</a>. Last
             Updated on 12-08-2020. </em>
 
         </div>
