--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
               <h4>Bachelor of Technology in Electronics and Communication Engineering</h4>
               <h5>2013 - 2017</h5>
               <p><em>Amrita School of Engineering, Coimbatore, India</em></p>
-              <p>GPA: 8.67 (8.79*) </p>
+              <p>GPA: 8.68</p>
             <!-- TODO -->
               <!-- <p>
                 Major Coursework: 
@@ -347,9 +347,7 @@
 
 
           </div>
-          <em data-aos="fade-up">* Indicates GPA Calculated based only on Core Subjects. Pdf Version Available @ <a
-              href="assets/documents/Gokkulnath_TS.pdf">Link</a>. Last
-            Updated on 12-08-2020. </em>
+          <em data-aos="fade-up"> Pdf Version Available @ <a href="assets/documents/Gokkulnath_TS.pdf">Link</a>. Last Updated on 12-08-2020. </em>
 
         </div>
     </section><!-- End Resume Section -->
