--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="https://gokkulnath.ml"> Gokkulnath T S</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://twitter.com/gokkulnath" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://twitter.com/gokkulnath" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
           <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
-          <a href="https://github.com/Gokkulnath" class="github"><i class="bx bxl-github"></i></a>
-          <a href="https://www.youtube.com/channel/UCUMvCy-usqYYVlybRbc5NQw" class="youtube"><i
+          <a href="https://github.com/Gokkulnath" class="github"><i class="bx bxl-github" target="_blank"></i></a>
+          <a href="https://www.youtube.com/channel/UCUMvCy-usqYYVlybRbc5NQw" class="youtube" target="_blank"><i
               class="bx bxl-youtube"></i></a>
-          <a href="https://www.linkedin.com/in/gokkulnathts" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/gokkulnathts" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
