--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
         </div>
 
         <br>
-        <h3>Failed Publications:</h3>
+        <h3>Preprints:</h3>
 
         <div class="resume-item">
           <h5>A Novel Clustered Support Vector Machine with Reduced Support Vectors for Big Data Classification</h5>
