--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
       <nav class="nav-menu">
         <ul>
-          <li class="active"><a href="https://gokkulnath.ml"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li class="active"><a href="https://gokkulnath.ml" onclick="window.scrollTo(0, 0);"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#publication"><i class="bx bx-file-blank"></i> <span>Publications</span></a></li>
