Rename Portfolio -> project

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#publication"><i class="bx bx-file-blank"></i> <span>Publications</span></a></li>
-          <li><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
+          <li><a href="#project"><i class="bx bx-book-content"></i> Project</a></li>
           <li><a href="https://blog.gokkulnath.ml/"><i class="bx bx-server"></i> Blog</a></li>
           <li><a href="#otheractivities"><i class="bx bx-briefcase"></i> Other Activities</a></li>
 
@@ -402,8 +402,8 @@
 
 
 
-    <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
+    <!-- ======= Project Section ======= -->
+    <section id="project" class="portfolio section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -550,7 +550,7 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section><!-- End Project Section -->
 
 
 
