Add Twitter Feed

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <p>I'm <span class="typed"
           data-typed-items="a Software Developer, an Independent Researcher, a Deep Learning and Computer Vision Enthusiast"></span>
       </p>
-    </div>
+   </div>
   </section><!-- End Hero -->
 
   <main id="main">
@@ -673,7 +673,13 @@
           </div>
         </div>
 
+        <div>
+          <a class="twitter-timeline" data-width="1000" data-height="600"  href="https://twitter.com/gokkulnath?ref_src=twsrc%5Etfw">Tweets by gokkulnath</a>
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  
+        </div>
       </div>
+      
     </section><!-- End Other Activities Section -->
 
     <!-- ======= Footer ======= -->
