--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <li><a href="#publication"><i class="bx bx-file-blank"></i> <span>Publications</span></a></li>
           <li><a href="#project"><i class="bx bx-book-content"></i> Project</a></li>
           <li><a href="https://blog.gokkulnath.ml/"><i class="bx bx-server"></i> Blog</a></li>
-          <li><a href="#otheractivities"><i class="bx bx-briefcase"></i> Other Activities</a></li>
+<!--           <li><a href="#otheractivities"><i class="bx bx-briefcase"></i> Other Activities</a></li> -->
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -557,7 +557,8 @@
 
 
     <!-- ======= Other Activities Section ======= -->
-    <section id="otheractivities" class="resume">
+<!--     
+<section id="otheractivities" class="resume">
       <div class="container">
 
         <div class="section-title">
@@ -680,7 +681,9 @@
         </div>
       </div>
       
-    </section><!-- End Other Activities Section -->
+    </section>
+-->
+<!-- End Other Activities Section --> 
 
     <!-- ======= Footer ======= -->
     <footer id="footer">
