--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="https://gokkulnath.ml"> Gokkulnath T S</a></h1>
+        <h1 class="text-light"><a href="https://gokkulnath.site"> Gokkulnath T S</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/gokkulnath" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
           <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
@@ -66,12 +66,12 @@
 
       <nav class="nav-menu">
         <ul>
-          <li class="active"><a href="https://gokkulnath.ml" onclick="window.scrollTo(0, 0);"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li class="active"><a href="https://gokkulnath.site" onclick="window.scrollTo(0, 0);"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#publication"><i class="bx bx-file-blank"></i> <span>Publications</span></a></li>
           <li><a href="#project"><i class="bx bx-book-content"></i> Project</a></li>
-          <li><a href="https://blog.gokkulnath.ml/"><i class="bx bx-server"></i> Blog</a></li>
+          <li><a href="https://blog.gokkulnath.site/"><i class="bx bx-server"></i> Blog</a></li>
 <!--           <li><a href="#otheractivities"><i class="bx bx-briefcase"></i> Other Activities</a></li> -->
 
         </ul>
